--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name"
-        app:layout_constraintHorizontal_chainStyle="spread"
+        android:adjustViewBounds="true"
         />
 
     <LinearLayout
@@ -110,7 +110,6 @@
             android:src="@drawable/ic_baseline_arrow_downward_24" />
 
         <TextView
-            android:id="@+id/max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
@@ -144,10 +143,11 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:textSize="20sp"
-            android:text="@string/maxtemp"
+            android:id="@+id/max"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/maxtemp"
+            android:textSize="20sp" />
 
         <TextView
             android:textSize="20sp"
